[package]
name = "rxv"
version = "0.1.0"
edition = "2021"
authors = ["Youlixx"]

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
chrono = "0.4.39"
thiserror = "2.0.11"
aide = { version = "0.14.0", features = [ "redoc", "swagger", "axum-json", "macros"] }