[package]
name = "rxv"
version = "0.1.0"
edition = "2021"
authors = ["Youlixx"]

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.13", features = ["io"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
chrono = "0.4.39"
thiserror = "2.0.11"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"
sha2 = "0.10.8"
md-5 = "0.10.6"
hex = "0.4.3"